--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -1,3 +1,17 @@
 {
-  "welcome": "Bienvenue"
+  "welcome": "Bienvenue",
+  "switch_language": "English",
+  "learning_resources": "Ressources d'apprentissage",
+  "search_description": "Nous apprenons et nous nous adaptons continuellement nos méthodes de travail. \nVoici quelques-unes des façons dont nous avons abordé notre travail.",
+  "proof_of_concept": {
+    "title": "PREUVE DE CONCEPT",
+    "in_progress": "Il s'agit d'un site en cours de développement.",
+    "help_improve": "Aidez-nous à l'améliorer."
+  },
+  "search": "Recherche",
+  "aria": {
+    "search_input": "Recherche",
+    "search_button": "Recherche"
+  },
+  "contact_us": "Nous joindre"
 }
