--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -1,3 +1,17 @@
 {
-  "welcome": "Welcome"
+  "welcome": "Welcome",
+  "switch_language": "Francais",
+  "learning_resources": "Learning Resources",
+  "search_description": "We're continuously learning and adjusting our practices.\nHere are some of the ways we've approached our work.",
+  "proof_of_concept": {
+    "title": "Proof of Concept",
+    "in_progress": "This content is a work in progress.",
+    "help_improve": "Help us improve"
+  },
+  "search": "Search",
+  "aria": {
+    "search_input": "Search text",
+    "search_button": "Search"
+  },
+  "contact_us": "Contact Us"
 }
