--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -4,7 +4,7 @@
   "learning_resources": "Learning Resources",
   "search_description": "We're continuously learning and adjusting our practices.\nHere are some of the ways we've approached our work.",
   "proof_of_concept": {
-    "title": "Proof of Concept",
+    "title": "ALPHA",
     "in_progress": "This content is a work in progress.",
     "help_improve": "Help us improve"
   },
@@ -28,5 +28,14 @@
     "info-2": "To inquire about partnering with us to get coaching and advice, you can email us at:"
   },
   "last_updated": "Last updated",
-  "terms": "Terms and conditions"
+  "terms":
+  {
+    "title": "Terms and conditions",
+    "urlSlug": "terms"
+  },
+  "privacy":
+  {
+    "title" : "Privacy",
+    "urlSlug" : "privacy"
+  }
 }
