--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -1,11 +1,11 @@
 {
   "welcome": "Welcome",
-  "switch_language": "Francais",
-  "learning_resources": "Learning Resources",
-  "search_description": "We're continuously learning and adjusting our practices.\nHere are some of the ways we've approached our work.",
+  "switch_language": "Français",
+  "learning_resources": "CDS Learning Resources",
+  "search_description": "Sharing resources grounded in our work to help fellow public servants.",
   "proof_of_concept": {
-    "title": "Proof of Concept",
-    "in_progress": "This content is a work in progress.",
+    "title": "Alpha",
+    "in_progress": "We're starting to build out our collection and only have a limited set of resources available at this time.",
     "help_improve": "Help us improve"
   },
   "search": "Search",
@@ -13,7 +13,7 @@
     "title": "Welcome to Learning Resources",
     "description": "Sharing service delivery resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
-    "topics_heading": "Resource topics"
+    "topics_heading": "Current resources"
   },
   "results": "results",
   "aria": {
