--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -4,9 +4,8 @@
   "learning_resources": "Ressources d'apprentissage du SNC",
   "search_description": "Nous partageons des ressources ancrées dans notre travail pour aider nos collègues fonctionnaires.",
   "proof_of_concept": {
-    "title": "Alpha",
-    "in_progress": "Nous commençons à constituer notre collection et ne disponsons que d'un ensemble limité de ressources pour le moment.",
-    "help_improve": "Aidez-nous à l'améliorer."
+    "title": "PILOTE",
+    "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection prochainement."
   },
   "landing_page": {
     "title": "Bienvenue aux ressources d'apprentissage",
