feat: fix content and translation

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -19,6 +19,7 @@
     "search_input": "Search",
     "search_button": "Search"
   },
+  "new.heading": "New",
   "contact_us": "Contact Us",
   "contact": {
     "heading": "Contact us",
