--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -19,6 +19,7 @@
     "search_input": "Recherche",
     "search_button": "Recherche"
   },
+  "new.heading": "Nouveautés",
   "contact_us": "Nous joindre",
   "contact": {
     "heading": "Nous joindre",
