--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -19,6 +19,7 @@
     "search_input": "Search",
     "search_button": "Search"
   },
+  "new.heading": "New",
   "contact_us": "Contact Us",
   "last_updated": "Last updated"
 }
