--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -19,6 +19,7 @@
     "search_input": "Recherche",
     "search_button": "Recherche"
   },
+  "new.heading": "Nouveautés",
   "contact_us": "Nous joindre",
   "last_updated": "Dernière mise à jour :"
 }
