feat: update text in json

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -9,7 +9,7 @@
   },
   "search": "Search",
   "landing_page": {
-    "title": "Welcome to Learning Resources",
+    "title": "Service delivery is hard. We can help.",
     "description": "Sharing resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
@@ -19,7 +19,7 @@
     "search_input": "Search",
     "search_button": "Search"
   },
-  "contact_us": "Contact Us",
+  "contact_us": "Contact us",
   "contact": {
     "heading": "Contact us",
     "info-1": "We'd love to learn from your experiences, and see how we can help.",
