--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -1,14 +1,14 @@
 {
   "welcome": "Bienvenue",
   "switch_language": "English",
-  "learning_resources": "Ressources d'apprentissage",
+  "learning_resources": "Ressources d'apprentissage du SNC",
   "search_description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
   "proof_of_concept": {
     "title": "PILOTE",
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources prochainement."
   },
   "landing_page": {
-    "title": "Bienvenue aux ressources d'apprentissage",
+    "title": "La prestation de services est difficile. Nous pouvons vous aider.",
     "description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
@@ -23,7 +23,7 @@
   "contact": {
     "heading": "Nous joindre",
     "info-1": "Nous serions ravis d'apprendre de vos expériences, afin de voir comment nous pouvons vous aider.",
-    "info-2": "Pour en savoir plus sur les possibilités de partenariat pour obtenir de l'encadrement et des conseils, veuillez communiquer avec nous par courriel :"
+    "info-2": "Pour en savoir plus sur les possibilités de partenariats pour obtenir de l'encadrement et des conseils, veuillez communiquer avec nous par courriel :"
   },
   "last_updated": "Dernière mise à jour :",
   "terms": {
