--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -8,10 +8,10 @@
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources prochainement."
   },
   "landing_page": {
-    "title": "Bienvenue aux ressources d'apprentissage",
+    "title": "a prestation de services est difficile. Nous pouvons vous aider.",
     "description": "Nous partageons des ressources ancrées dans notre travail pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
-    "topics_heading": "Ressources disponibles"
+    "topics_heading": "Thèmes"
   },
   "results": "Résultats",
   "search": "Recherche",
