feat: index page add subtitle

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -10,6 +10,7 @@
   "search": "Search",
   "landing_page": {
     "title": "Service delivery is hard. We can help.",
+    "subtitle": "We can help.",
     "description": "Sharing resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
