--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -8,7 +8,8 @@
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources prochainement."
   },
   "landing_page": {
-    "title": "La prestation de services est difficile. Nous pouvons vous aider.",
+    "title": "La prestation de services est difficile.",
+    "subtitle": "Nous pouvons vous aider.",
     "description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
