--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -9,7 +9,8 @@
   },
   "search": "Search",
   "landing_page": {
-    "title": "Service delivery is hard. We can help.",
+    "title": "Service delivery is hard.",
+    "subtitle": "We can help.",
     "description": "Sharing service delivery resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
