--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -1,15 +1,15 @@
 {
   "welcome": "Bienvenue",
   "switch_language": "English",
-  "learning_resources": "Ressources d'apprentissage du SNC",
+  "learning_resources": "Ressources d'apprentissage",
   "search_description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
   "proof_of_concept": {
     "title": "PILOTE",
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources prochainement."
   },
   "landing_page": {
-    "title": "La prestation de services est difficile.",
-    "subtitle": "Nous pouvons vous aider.",
+    "title": "Bienvenue aux ressources d'apprentissage du SNC",
+    "subtitle": "La prestation de services est difficile.Nous pouvons vous aider.",
     "description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
