--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -1,7 +1,7 @@
 {
   "welcome": "Welcome",
   "switch_language": "Français",
-  "learning_resources": "CDS Learning Resources",
+  "learning_resources": "Learning Resources",
   "search_description": "Sharing resources grounded in our work to help fellow public servants.",
   "proof_of_concept": {
     "title": "PILOT",
@@ -9,8 +9,8 @@
   },
   "search": "Search",
   "landing_page": {
-    "title": "Service delivery is hard.",
-    "subtitle": "We can help.",
+    "title": "Welcome to CDS Learning Resources",
+    "subtitle": "Service delivery is hard. We can help.",
     "description": "Sharing service delivery resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
