feat: landing copy

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -10,8 +10,7 @@
   "search": "Search",
   "landing_page": {
     "title": "Welcome to CDS Learning Resources",
-    "subtitle": "Service delivery is hard. We can help.",
-    "description": "Sharing resources grounded in our work to help fellow public servants.",
+    "description": "Sharing service delivery resources grounded in our work to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
   },
