--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -9,8 +9,7 @@
   },
   "landing_page": {
     "title": "Bienvenue aux ressources d'apprentissage du SNC",
-    "subtitle": "La prestation de services est difficile. Nous pouvons vous aider.",
-    "description": "Nous partageons des ressources ancrées dans notre travail pour aider nos collègues fonctionnaires.",
+    "description": "Nous partageons des ressources de prestation de service ancrées dans notre travail pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
   },
