--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -1,11 +1,11 @@
 {
   "welcome": "Bienvenue",
   "switch_language": "English",
-  "learning_resources": "Ressources d'apprentissage du SNC",
+  "learning_resources": "Ressources d'apprentissage",
   "search_description": "Nous partageons des ressources ancrées dans notre travail pour aider nos collègues fonctionnaires.",
   "proof_of_concept": {
     "title": "PILOTE",
-    "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources prochainement."
+    "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources."
   },
   "landing_page": {
     "title": "a prestation de services est difficile. Nous pouvons vous aider.",
