fix: first attempt to fix generation issues

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -34,5 +34,8 @@
     "title": "Privacy",
     "urlSlug": "privacy"
   },
-  "home": "Home"
+  "home": "Home",
+  "page_prefix": {
+    "topic": "topic/"
+  }
 }
