--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -34,5 +34,8 @@
     "title": "Confidentialité",
     "urlSlug": "confidentialite"
   },
-  "home": "Accueil"
+  "home": "Accueil",
+  "page_prefix": {
+    "topic": "themes/"
+  }
 }
