chore: add resource paths

--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -36,6 +36,7 @@
   },
   "home": "Accueil",
   "page_prefix": {
-    "topic": "themes/"
+    "topic": "themes/",
+    "resource": "ressource/"
   }
 }
