chore: add generator for legal pages

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -37,6 +37,7 @@
   "home": "Home",
   "page_prefix": {
     "topic": "topic/",
-    "resource": "resource/"
+    "resource": "resource/",
+    "legal": "legal/"
   }
 }
