Refactor all axios requests to contentful (pt 2) (#144)
* fix: remove all manual instances of axios header instances

* chore: remove contentful plugin, and lint fixes

* chore: add runtime var for space id

* fix: remove env vars & use payload object

* fix: lint fixes and deleted category pages

* chore: set payload for other pages

* chore: refactor legal pages generation

* fix: first attempt to fix generation issues

* chore: lintfixes

* chore: add resource paths

* chore: add generator for legal pages

* chore: remove console.logs

* chore: refactor resources page

* chore: lint fixes

* fix: currentLocale from payload being overwritten

* fix: locale from payload being overwritten

* fix: home breadcrumb and resources translation

* chore: add route generation for the home pages

* fix: home pages not being generated

* chore: lint fix

Co-authored-by: Dylan <dylanzheng94@users.noreply.github.com>

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -14,7 +14,8 @@
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
   },
-  "results": "Resources",
+  "resources": "Resources",
+  "related_resources": "Related resources",
   "aria": {
     "search_input": "Search",
     "search_button": "Search"
@@ -34,5 +35,10 @@
     "title": "Privacy",
     "urlSlug": "privacy"
   },
-  "home": "Home"
+  "home": "Home",
+  "page_prefix": {
+    "topic": "topic/",
+    "resource": "resource/",
+    "legal": "legal/"
+  }
 }
