--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -13,7 +13,8 @@
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
   },
-  "results": "Résultats",
+  "resources": "Ressources",
+  "related_resources": "Ressources associées",
   "search": "Recherche",
   "aria": {
     "search_input": "Recherche",
@@ -34,5 +35,10 @@
     "title": "Confidentialité",
     "urlSlug": "confidentialite"
   },
-  "home": "Accueil"
+  "home": "Accueil",
+  "page_prefix": {
+    "topic": "themes/",
+    "resource": "ressource/",
+    "legal": "transparence/"
+  }
 }
