feat: add alt text to canada wordmark

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -40,5 +40,6 @@
     "topic": "topic/",
     "resource": "resource/",
     "legal": "legal/"
-  }
+  },
+  "canada_wordmark_alt": "Symbol of the Government of Canada"
 }
