--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -40,5 +40,6 @@
     "topic": "themes/",
     "resource": "ressource/",
     "legal": "transparence/"
-  }
+  },
+  "canada_wordmark_alt": "Symbole du gouvernement du Canada"
 }
