feat: about and contact pages

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -20,6 +20,7 @@
     "search_input": "Search",
     "search_button": "Search"
   },
+  "about": "About",
   "contact_us": "Contact us",
   "contact": {
     "heading": "Contact us",
