--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -20,6 +20,7 @@
     "search_input": "Recherche",
     "search_button": "Recherche"
   },
+  "about": "À propos",
   "contact_us": "Nous joindre",
   "contact": {
     "heading": "Nous joindre",
