--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -2,15 +2,15 @@
   "welcome": "Welcome",
   "switch_language": "Français",
   "learning_resources": "Learning Resources",
-  "search_description": "Sharing resources grounded in our work to help fellow public servants.",
+  "search_description": "Sharing resources grounded in our work at the Canadian Digital Service to help fellow public servants.",
   "proof_of_concept": {
     "title": "PILOT",
     "in_progress": "We're testing ideas and working to expand this resource collection."
   },
   "search": "Search",
   "landing_page": {
-    "title": "Welcome to CDS Learning Resources",
-    "description": "Sharing service delivery resources grounded in our work to help fellow public servants.",
+    "title": "Welcome to our Learning Resources",
+    "description": "Sharing service delivery resources grounded in our work  at the Canadian Digital Service to help fellow public servants.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
   },
