--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -2,14 +2,14 @@
   "welcome": "Bienvenue",
   "switch_language": "English",
   "learning_resources": "Ressources d'apprentissage",
-  "search_description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
+  "search_description": "Nous partageons des ressources de prestation de services ancrées dans notre travail au Service numérique canadien pour aider nos collègues fonctionnaires.",
   "proof_of_concept": {
     "title": "PILOTE",
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources."
   },
   "landing_page": {
-    "title": "Bienvenue aux ressources d'apprentissage du SNC",
-    "description": "Nous partageons des ressources de prestation de services ancrées dans notre travail pour aider nos collègues fonctionnaires.",
+    "title": "Bienvenue à nos ressources d'apprentissage",
+    "description": "Nous partageons des ressources de prestation de services ancrées dans notre travail au Service numérique canadien pour aider nos collègues fonctionnaires.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
     "topics_heading": "Thèmes"
   },
