--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -14,7 +14,7 @@
     "topics_heading": "Thèmes"
   },
   "resources": "Ressources",
-  "related_resources": "Ressources associées",
+  "related_resources": "Ressources connexes",
   "search": "Recherche",
   "aria": {
     "search_input": "Recherche",
