--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -42,5 +42,6 @@
     "resource": "ressource/",
     "legal": "transparence/"
   },
-  "canada_wordmark_alt": "Symbole du gouvernement du Canada"
+  "canada_wordmark_alt": "Symbole du gouvernement du Canada",
+  "jump_to": "Sur cette page"
 }
