--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -43,5 +43,5 @@
     "legal": "legal/"
   },
   "canada_wordmark_alt": "Symbol of the Government of Canada",
-  "jump_to": "Jump to"
+  "jump_to": "On this page"
 }
