fix: lint error due to missing comma

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -45,6 +45,6 @@
   },
   "canada_wordmark_alt": "Symbol of the Government of Canada",
   "collections": "Collections",
-  "related_collections": "Related collections"
+  "related_collections": "Related collections",
   "jump_to": "On this page"
 }
