--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -44,7 +44,7 @@
     "legal": "legal/"
   },
   "canada_wordmark_alt": "Symbol of the Government of Canada",
-  "collections": "Collections",
+  "collections": "Browse by content",
   "related_collections": "Related collections",
   "jump_to": "On this page"
 }
