--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -45,6 +45,6 @@
   },
   "canada_wordmark_alt": "Symbole du gouvernement du Canada",
   "jump_to": "Sur cette page",
-  "collections": "Feuilleter par contenu",
+  "collections": "Feuilleter les collections",
   "related_collections": "Collections connexes"
 }
