Change "Contact us" to "Contact"

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -19,6 +19,6 @@
     "search_input": "Search",
     "search_button": "Search"
   },
-  "contact_us": "Contact us",
+  "contact_us": "Contact",
   "last_updated": "Last updated"
 }
