Change "Nous joindre" to "Communiquez avec nous"
to make this more active

--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -20,6 +20,6 @@
     "search_input": "Recherche",
     "search_button": "Recherche"
   },
-  "contact_us": "Nous joindre",
+  "contact_us": "Communiquez avec nous",
   "last_updated": "Dernière mise à jour :"
 }
