Minor copyedit - change "Thèmes" to "Sujets" in FR

--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -11,7 +11,7 @@
     "title": "Bienvenue aux ressources d'apprentissage du SNC",
     "description": "Feuilletez des ressources de prestation de services ancrées dans notre travail au Service numérique canadien.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
-    "topics_heading": "Thèmes"
+    "topics_heading": "Sujets"
   },
   "resources": "Ressources",
   "related_resources": "Ressources connexes",
@@ -39,7 +39,7 @@
   "home": "Accueil",
   "page_prefix": {
     "collection": "collection/",
-    "topic": "themes/",
+    "topic": "sujet/",
     "resource": "ressource/",
     "legal": "transparence/"
   },
