Change "Pilot" to "Alpha" to provide cohesive context

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -4,7 +4,7 @@
   "learning_resources": "Learning resources",
   "search_description": "Browse service delivery resources grounded in our work at the Canadian Digital Service.",
   "proof_of_concept": {
-    "title": "PILOT",
+    "title": "ALPHA",
     "in_progress": "We're testing ideas and working to expand this resource collection."
   },
   "search": "Search",
