--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -4,7 +4,7 @@
   "learning_resources": "Ressources d'apprentissage",
   "search_description": "Feuilletez des ressources de prestation de services ancrées dans notre travail au Service numérique canadien.",
   "proof_of_concept": {
-    "title": "PILOTE",
+    "title": "ALPHA",
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources."
   },
   "landing_page": {
