[Release] Jumplinks, Resource Collections, Menu, Updated Documentation (#239)
* Minor change

Fixes #173

* Remove Canada.ca link in footer

Fixes #174

* Right align

* feat: add google tag manager (#200)

* feat: add google tag manager

* chore: add plugin to nuxt config

* ci: add google tag manager to terraform

* ci: add tf vars to gh actions

* ci: add google tag manager id to staging

* Fix/ci issues (#204)

* fix: add back removed div

* ci: add staging branch to gh actions

* ci: future proofing nuxt3

* fix: lint fixes

* docs: add PR templates (#205)

* fix: breadcrumbs accessibility

* ci: add unsafe inline strict dynamic to support v-if (#203)

* Copy of pull request template (#216)

Copied from the PULL_REQUEST_TEMPLATE folder

* ci: add google-analytics.com to the CSP (#217)

* [Release] Minor changes after soft launch (#202) (#222)

* Minor change

Fixes #173

* Remove Canada.ca link in footer

Fixes #174

* Right align

* feat: add google tag manager (#200)

* feat: add google tag manager

* chore: add plugin to nuxt config

* ci: add google tag manager to terraform

* ci: add tf vars to gh actions

* ci: add google tag manager id to staging

* Fix/ci issues (#204)

* fix: add back removed div

* ci: add staging branch to gh actions

* ci: future proofing nuxt3

* fix: lint fixes

* docs: add PR templates (#205)

Co-authored-by: Anik Brazeau <38330843+anikbrazeau@users.noreply.github.com>

Co-authored-by: Dylan <dylanzheng94@users.noreply.github.com>
Co-authored-by: Anik Brazeau <38330843+anikbrazeau@users.noreply.github.com>

* Update issue templates

* Update documentation (#225)

* docs: update contentful vars

* docs: adding scripts to make setting env vars easier

* docs: update documentation on running the app

* docs: update readme

* docs: update readme

* docs: add links

* docs: update links

* docs: add link to translation documentation

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -1,15 +1,15 @@
 {
   "welcome": "Welcome",
   "switch_language": "Français",
-  "learning_resources": "Learning Resources",
+  "learning_resources": "Learning resources",
   "search_description": "Browse service delivery resources grounded in our work at the Canadian Digital Service.",
   "proof_of_concept": {
-    "title": "PILOT",
+    "title": "ALPHA",
     "in_progress": "We're testing ideas and working to expand this resource collection."
   },
   "search": "Search",
   "landing_page": {
-    "title": "Welcome to CDS Learning Resources",
+    "title": "Welcome to CDS learning resources",
     "description": "Browse service delivery resources grounded in our work at the Canadian Digital Service.",
     "slogan": "Service delivery is hard. We can help.",
     "topics_heading": "Topics"
@@ -38,9 +38,13 @@
   },
   "home": "Home",
   "page_prefix": {
+    "collection": "collection/",
     "topic": "topic/",
     "resource": "resource/",
     "legal": "legal/"
   },
-  "canada_wordmark_alt": "Symbol of the Government of Canada"
+  "canada_wordmark_alt": "Symbol of the Government of Canada",
+  "collections": "Collections",
+  "related_collections": "Related collections",
+  "jump_to": "On this page"
 }
