--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -4,14 +4,14 @@
   "learning_resources": "Ressources d'apprentissage",
   "search_description": "Feuilletez des ressources de prestation de services ancrées dans notre travail au Service numérique canadien.",
   "proof_of_concept": {
-    "title": "PILOTE",
+    "title": "ALPHA",
     "in_progress": "Nous testons des idées et travaillons à l'élargissement de cette collection de ressources."
   },
   "landing_page": {
     "title": "Bienvenue aux ressources d'apprentissage du SNC",
     "description": "Feuilletez des ressources de prestation de services ancrées dans notre travail au Service numérique canadien.",
     "slogan": "La prestation de services est difficile. Nous pouvons vous aider.",
-    "topics_heading": "Thèmes"
+    "topics_heading": "Sujets"
   },
   "resources": "Ressources",
   "related_resources": "Ressources connexes",
@@ -38,9 +38,13 @@
   },
   "home": "Accueil",
   "page_prefix": {
-    "topic": "themes/",
+    "collection": "collection/",
+    "topic": "sujet/",
     "resource": "ressource/",
     "legal": "transparence/"
   },
-  "canada_wordmark_alt": "Symbole du gouvernement du Canada"
+  "canada_wordmark_alt": "Symbole du gouvernement du Canada",
+  "jump_to": "Sur cette page",
+  "collections": "Collections",
+  "related_collections": "Collections connexes"
 }
