refactor: use translate files for text

--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -46,5 +46,6 @@
   "canada_wordmark_alt": "Symbole du gouvernement du Canada",
   "jump_to": "Sur cette page",
   "collections": "Collections",
-  "related_collections": "Collections connexes"
+  "related_collections": "Collections connexes",
+  "close": "Fermer"
 }
