--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -46,5 +46,6 @@
   "canada_wordmark_alt": "Symbol of the Government of Canada",
   "collections": "Collections",
   "related_collections": "Related collections",
-  "jump_to": "On this page"
+  "jump_to": "On this page",
+  "close": "Close"
 }
