refactor: address PR feedback

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -2,6 +2,7 @@
   "welcome": "Welcome",
   "switch_language": "Français",
   "learning_resources": "Learning resources",
+  "learning_resources_shortform": "LR",
   "search_description": "Browse service delivery resources grounded in our work at the Canadian Digital Service.",
   "proof_of_concept": {
     "title": "ALPHA",
