feat: jumplinks enhanced for mobile
* feat: optimize resource jump links for mobile

* feat: minimize header contents on smaller viewports

* feat: refine mobile jump links UI and add close button to menu

* feat: add Viewport utility

* refactor: remove scroll listener when using mobile jumplinks

* fix: regression issue with side jump links

* refactor: position h1 ahead of jumplinks

* refactor: use translate files for text

* fix: margin misalignment

* refactor: address PR feedback

* refactor: reorder lifecycle hooks and computed property

* fix: prop requires default value

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -2,6 +2,7 @@
   "welcome": "Welcome",
   "switch_language": "Français",
   "learning_resources": "Learning resources",
+  "learning_resources_shortform": "LR",
   "search_description": "Browse service delivery resources grounded in our work at the Canadian Digital Service.",
   "proof_of_concept": {
     "title": "ALPHA",
@@ -46,5 +47,6 @@
   "canada_wordmark_alt": "Symbol of the Government of Canada",
   "collections": "Collections",
   "related_collections": "Related collections",
-  "jump_to": "On this page"
+  "jump_to": "On this page",
+  "close": "Close"
 }
