fix: add french to skip to content link

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -50,5 +50,6 @@
   "collections": "Collections",
   "related_collections": "Related collections",
   "jump_to": "On this page",
-  "close": "Close"
+  "close": "Close",
+  "skip_to_content": "Skip to content"
 }
