--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -50,5 +50,6 @@
   "jump_to": "Sur cette page",
   "collections": "Collections",
   "related_collections": "Collections connexes",
-  "close": "Fermer"
+  "close": "Fermer",
+  "skip_to_content": "Passer au contenu principal"
 }
