--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -50,5 +50,5 @@
   "related_collections": "Related collections",
   "jump_to": "On this page",
   "close": "Close",
-  "skip_to_content": "Skip to content"
+  "skip_to_content": "Skip to main content"
 }
