feat: get definite article of resource type from Contentful

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -51,5 +51,6 @@
   "jump_to": "On this page",
   "close": "Close",
   "skip_to_content": "Skip to main content",
-  "examples_from_our_work": "Examples from our work"
+  "examples_from_our_work": "Examples from our work",
+  "read": "Read"
 }
