--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -51,5 +51,6 @@
   "related_collections": "Collections connexes",
   "close": "Fermer",
   "skip_to_content": "Passer au contenu principal",
-  "examples_from_our_work": "Exemples de notre travail"
+  "examples_from_our_work": "Exemples de notre travail",
+  "read": "Lisez"
 }
