feat: component design update

--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -52,5 +52,5 @@
   "close": "Fermer",
   "skip_to_content": "Passer au contenu principal",
   "examples_from_our_work": "Exemples de notre travail",
-  "read": "Lisez"
+  "external_link": "Lien externe"
 }
