--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -52,5 +52,5 @@
   "close": "Close",
   "skip_to_content": "Skip to main content",
   "examples_from_our_work": "Examples from our work",
-  "read": "Read"
+  "external_link": "External link"
 }
