feat: add external resource component
* feat: add query for external resources

* feat: external resource

* fix: remove getExamplesLinkName method from constants file

* feat: get definite article of resource type from Contentful

* fix: lintfix

* feat: add card default background color

* feat: component design update

--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -50,5 +50,7 @@
   "collections": "Collections",
   "related_collections": "Collections connexes",
   "close": "Fermer",
-  "skip_to_content": "Passer au contenu principal"
+  "skip_to_content": "Passer au contenu principal",
+  "examples_from_our_work": "Exemples de notre travail",
+  "external_link": "Lien externe"
 }
